APIS-4761: code migration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,7 +17,7 @@ include "backend.conf"
 # This is the main configuration file for the application.
 # ~~~~~
 
-appName = api-platform-microservice
+appName = api-platform-jobs
 
 # An ApplicationLoader that uses Guice to bootstrap the application.
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
@@ -49,9 +49,9 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
-play.modules.enabled += "uk.gov.hmrc.apiplatformmicroservice.config.ConfigurationModule"
-play.modules.enabled += "uk.gov.hmrc.apiplatformmicroservice.config.SchedulerModule"
-play.modules.enabled += "uk.gov.hmrc.apiplatformmicroservice.connectors.ThirdPartyApplicationConnectorModule"
+play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ConfigurationModule"
+play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.SchedulerModule"
+play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.connectors.ThirdPartyApplicationConnectorModule"
 
 # Session Timeout
 # ~~~~
@@ -99,7 +99,7 @@ controllers {
   # 300 is the default, you may need to change this according to your needs
   confidenceLevel = 300
 
-  uk.gov.hmrc.apiplatformmicroservice.controllers.MicroserviceHelloWorldController = {
+  uk.gov.hmrc.apiplatformjobs.controllers.MicroserviceHelloWorldController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
@@ -108,7 +108,7 @@ controllers {
 }
 
 mongodb {
-  uri = "mongodb://localhost:27017/api-platform-microservice"
+  uri = "mongodb://localhost:27017/api-platform-jobs"
 
   failoverStrategy {
     initialDelayMsecs = 100
