--- a/conf/application.conf
+++ b/conf/application.conf
@@ -158,18 +158,21 @@ metrics {
 
 # Microservice specific config
 deleteUnusedApplicationsAfter = 365d
-notifyDeletionPendingInAdvance = 30d
 
 UpdateUnusedApplicationsRecords-SANDBOX {
   startTime = "00:30"
   executionInterval = 1d
   enabled = false
+  notifyDeletionPendingInAdvance = 30d
+  externalEnvironmentName = "Sandbox"
 }
 
 UpdateUnusedApplicationsRecords-PRODUCTION {
   startTime = "01:00"
   executionInterval = 1d
   enabled = false
+  notifyDeletionPendingInAdvance = 30d
+  externalEnvironmentName = "Production"
 }
 
 auditing {
@@ -182,9 +185,6 @@ auditing {
     }
   }
 }
-
-
-
 
 microservice {
   metrics {
@@ -210,6 +210,11 @@ microservice {
     third-party-application-sandbox {
       host = localhost
       port = 9607
+    }
+
+    email {
+      host = localhost
+      port = 8300
     }
   }
 }
