--- a/conf/application.conf
+++ b/conf/application.conf
@@ -175,6 +175,18 @@ ApplicationToBeDeletedNotifications-PRODUCTION {
   externalEnvironmentName = "Production"
 }
 
+DeleteUnusedApplications-SANDBOX {
+  startTime = "01:30"
+  executionInterval = 1d
+  enabled = false
+}
+
+DeleteUnusedApplications-PRODUCTION {
+  startTime = "02:00"
+  executionInterval = 1d
+  enabled = false
+}
+
 auditing {
   enabled = true
   traceRequests = true
