API-4363: Moved general unused application configuration to separate block in application.conf. Removed code that sends emails from update job. Introduced UnusedApplicationsJob

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -157,31 +157,37 @@ metrics {
 }
 
 # Microservice specific config
-deleteUnusedApplicationsAfter = 365d
+UnusedApplications {
+  SANDBOX {
+    deleteUnusedApplicationsAfter = 365d
+    sendNotificationsInAdvance = [30d, 14d]
+  }
 
-UpdateUnusedApplicationRecords-SANDBOX {
+  PRODUCTION {
+    deleteUnusedApplicationsAfter = 730d
+    sendNotificationsInAdvance = [30d, 14d, 7d, 1d]
+  }
+}
+
+UpdateUnusedApplicationRecordsJob-SANDBOX {
   startTime = "00:30"
   executionInterval = 1d
   enabled = false
-  notifyDeletionPendingInAdvance = 30d
-  externalEnvironmentName = "Sandbox"
 }
 
-UpdateUnusedApplicationRecords-PRODUCTION {
+UpdateUnusedApplicationRecordsJob-PRODUCTION {
   startTime = "01:00"
   executionInterval = 1d
   enabled = false
-  notifyDeletionPendingInAdvance = 30d
-  externalEnvironmentName = "Production"
 }
 
-DeleteUnusedApplications-SANDBOX {
+DeleteUnusedApplicationsJob-SANDBOX {
   startTime = "01:30"
   executionInterval = 1d
   enabled = false
 }
 
-DeleteUnusedApplications-PRODUCTION {
+DeleteUnusedApplicationsJob-PRODUCTION {
   startTime = "02:00"
   executionInterval = 1d
   enabled = false
