API-4363: Consolidate configuration for scheduled jobs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -169,28 +169,32 @@ UnusedApplications {
   }
 }
 
-UpdateUnusedApplicationRecordsJob-SANDBOX {
-  startTime = "00:30"
-  executionInterval = 1d
-  enabled = false
+UpdateUnusedApplicationRecordsJob {
+  SANDBOX {
+    startTime = "00:30"
+    executionInterval = 1d
+    enabled = false
+  }
+
+  PRODUCTION {
+    startTime = "01:00"
+    executionInterval = 1d
+    enabled = false
+  }
 }
 
-UpdateUnusedApplicationRecordsJob-PRODUCTION {
-  startTime = "01:00"
-  executionInterval = 1d
-  enabled = false
-}
+DeleteUnusedApplicationsJob {
+  SANDBOX {
+    startTime = "01:30"
+    executionInterval = 1d
+    enabled = false
+  }
 
-DeleteUnusedApplicationsJob-SANDBOX {
-  startTime = "01:30"
-  executionInterval = 1d
-  enabled = false
-}
-
-DeleteUnusedApplicationsJob-PRODUCTION {
-  startTime = "02:00"
-  executionInterval = 1d
-  enabled = false
+  PRODUCTION {
+    startTime = "02:00"
+    executionInterval = 1d
+    enabled = false
+  }
 }
 
 auditing {
