--- a/conf/application.conf
+++ b/conf/application.conf
@@ -157,34 +157,44 @@ metrics {
 }
 
 # Microservice specific config
-deleteUnusedApplicationsAfter = 365d
+UnusedApplications {
+  SANDBOX {
+    deleteUnusedApplicationsAfter = 365d
+    sendNotificationsInAdvance = [30d, 14d]
+  }
 
-ApplicationToBeDeletedNotifications-SANDBOX {
-  startTime = "00:30"
-  executionInterval = 1d
-  enabled = false
-  notifyDeletionPendingInAdvance = 30d
-  externalEnvironmentName = "Sandbox"
+  PRODUCTION {
+    deleteUnusedApplicationsAfter = 730d
+    sendNotificationsInAdvance = [30d, 14d, 7d, 1d]
+  }
 }
 
-ApplicationToBeDeletedNotifications-PRODUCTION {
-  startTime = "01:00"
-  executionInterval = 1d
-  enabled = false
-  notifyDeletionPendingInAdvance = 30d
-  externalEnvironmentName = "Production"
+UpdateUnusedApplicationRecordsJob {
+  SANDBOX {
+    startTime = "00:30"
+    executionInterval = 1d
+    enabled = false
+  }
+
+  PRODUCTION {
+    startTime = "01:00"
+    executionInterval = 1d
+    enabled = false
+  }
 }
 
-DeleteUnusedApplications-SANDBOX {
-  startTime = "01:30"
-  executionInterval = 1d
-  enabled = false
-}
+DeleteUnusedApplicationsJob {
+  SANDBOX {
+    startTime = "01:30"
+    executionInterval = 1d
+    enabled = false
+  }
 
-DeleteUnusedApplications-PRODUCTION {
-  startTime = "02:00"
-  executionInterval = 1d
-  enabled = false
+  PRODUCTION {
+    startTime = "02:00"
+    executionInterval = 1d
+    enabled = false
+  }
 }
 
 auditing {
