API-4363: Added tests for TimedJob scheduling

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -171,13 +171,13 @@ UnusedApplications {
 
 UpdateUnusedApplicationRecordsJob {
   SANDBOX {
-    startTime = "00:30"
+    startTime = "00:30" # Time is in UTC
     executionInterval = 1d
     enabled = false
   }
 
   PRODUCTION {
-    startTime = "01:00"
+    startTime = "01:00" # Time is in UTC
     executionInterval = 1d
     enabled = false
   }
@@ -185,13 +185,13 @@ UpdateUnusedApplicationRecordsJob {
 
 DeleteUnusedApplicationsJob {
   SANDBOX {
-    startTime = "01:30"
+    startTime = "01:30" # Time is in UTC
     executionInterval = 1d
     enabled = false
   }
 
   PRODUCTION {
-    startTime = "02:00"
+    startTime = "02:00" # Time is in UTC
     executionInterval = 1d
     enabled = false
   }
