--- a/conf/application.conf
+++ b/conf/application.conf
@@ -177,6 +177,20 @@ UpdateUnusedApplicationRecordsJob {
   }
 
   PRODUCTION {
+    startTime = "00:40" # Time is in UTC
+    executionInterval = 1d
+    enabled = false
+  }
+}
+
+SendUnusedApplicationNotificationsJob {
+  SANDBOX {
+    startTime = "00:50" # Time is in UTC
+    executionInterval = 1d
+    enabled = false
+  }
+
+  PRODUCTION {
     startTime = "01:00" # Time is in UTC
     executionInterval = 1d
     enabled = false
@@ -185,13 +199,13 @@ UpdateUnusedApplicationRecordsJob {
 
 DeleteUnusedApplicationsJob {
   SANDBOX {
-    startTime = "01:30" # Time is in UTC
+    startTime = "01:10" # Time is in UTC
     executionInterval = 1d
     enabled = false
   }
 
   PRODUCTION {
-    startTime = "02:00" # Time is in UTC
+    startTime = "01:20" # Time is in UTC
     executionInterval = 1d
     enabled = false
   }
