--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,11 +161,13 @@ UnusedApplications {
   SANDBOX {
     deleteUnusedApplicationsAfter = 365d
     sendNotificationsInAdvance = [30d, 14d]
+    environmentName = "Sandbox"
   }
 
   PRODUCTION {
     deleteUnusedApplicationsAfter = 730d
     sendNotificationsInAdvance = [30d, 14d, 7d, 1d]
+    environmentName = "Production"
   }
 }
 
