API-4182: Set a single notification for each environment

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -160,13 +160,13 @@ metrics {
 UnusedApplications {
   SANDBOX {
     deleteUnusedApplicationsAfter = 365d
-    sendNotificationsInAdvance = [30d, 14d]
+    sendNotificationsInAdvance = [30d]
     environmentName = "Sandbox"
   }
 
   PRODUCTION {
     deleteUnusedApplicationsAfter = 730d
-    sendNotificationsInAdvance = [30d, 14d, 7d, 1d]
+    sendNotificationsInAdvance = [30d]
     environmentName = "Production"
   }
 }
