API-4182: Set notification for 30 days and 7 days

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -160,13 +160,13 @@ metrics {
 UnusedApplications {
   SANDBOX {
     deleteUnusedApplicationsAfter = 365d
-    sendNotificationsInAdvance = [30d]
+    sendNotificationsInAdvance = [30d, 7d]
     environmentName = "Sandbox"
   }
 
   PRODUCTION {
     deleteUnusedApplicationsAfter = 730d
-    sendNotificationsInAdvance = [30d]
+    sendNotificationsInAdvance = [30d, 7d]
     environmentName = "Production"
   }
 }
