API-4381: email preferences job

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -235,6 +235,11 @@ microservice {
   }
 
   services {
+    api-platform-microservice {
+      host = localhost
+      port = 9602
+    }
+
     third-party-developer {
       host = localhost
       port = 9615
