APIS-4929 - Job to update userId of collaborators
Co-authored-by: Pete Slater <pslater@equalexperts.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -133,19 +133,6 @@ mongo-async-driver {
 # You can disable evolutions if needed
 # evolutionplugin=disabled
 
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
-
-# Root logger:
-logger.root = ERROR
-
-# Logger used by the framework:
-logger.play = INFO
-
-# Logger provided to your application:
-logger.application = DEBUG
-
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
   name = ${appName}
@@ -153,6 +140,13 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
+  enabled = true
+}
+
+# Scheduled Config
+migrateCollaboratorsIdJob {
+  initialDelay = 5 seconds
+  interval = 1 day
   enabled = true
 }
 
@@ -214,8 +208,8 @@ DeleteUnusedApplicationsJob {
 }
 
 auditing {
-  enabled = true
-  traceRequests = true
+  enabled = false       # enable in app-config-base
+  traceRequests = false # enable in app-config-base
   consumer {
     baseUri {
       host = localhost
