APIS-4929 - Tweak and tidy up

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -208,8 +208,8 @@ DeleteUnusedApplicationsJob {
 }
 
 auditing {
-  enabled = false       # enable in app-config-base
-  traceRequests = false # enable in app-config-base
+  enabled = true
+  traceRequests = true
   consumer {
     baseUri {
       host = localhost
