APIS-5068: Add 1 day prior notification before application is deleted

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,13 +154,13 @@ migrateCollaboratorsIdJob {
 UnusedApplications {
   SANDBOX {
     deleteUnusedApplicationsAfter = 365d
-    sendNotificationsInAdvance = [30d, 7d]
+    sendNotificationsInAdvance = [30d, 7d, 1d]
     environmentName = "Sandbox"
   }
 
   PRODUCTION {
     deleteUnusedApplicationsAfter = 730d
-    sendNotificationsInAdvance = [30d, 7d]
+    sendNotificationsInAdvance = [30d, 7d, 1d]
     environmentName = "Production"
   }
 }
