--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,6 +51,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 # Additional play modules can be added here
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ConfigurationModule"
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.SchedulerModule"
+play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ClockModule"
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.connectors.ThirdPartyApplicationConnectorModule"
 
 # Session Timeout
