--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
 # Provides MongoDb connector
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
@@ -51,6 +51,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 # Additional play modules can be added here
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ConfigurationModule"
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.SchedulerModule"
+play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ClockModule"
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.connectors.ThirdPartyApplicationConnectorModule"
 
 # Session Timeout
