--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -16,6 +16,8 @@ OrganizeImports {
     "play"
     "uk.gov.hmrc."
     "---"
+    "uk.gov.hmrc.apiplatform.modules."
+    "---"
     "uk.gov.hmrc.apiplatformjobs."
   ]
   importSelectorsOrder = Ascii
