--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -31,7 +31,8 @@ newlines.implicitParamListModifierPrefer = before
 newlines.avoidForSimpleOverflow = [tooLong, punct, slc]
 
 rewrite.rules = [SortModifiers]
-rewrite.rules = [AsciiSortImports]
+
+rewrite.imports.sort = ascii
 
 verticalMultiline.atDefnSite = true
 verticalMultiline.newlineAfterOpenParen = true
