--- a/conf/application.conf
+++ b/conf/application.conf
@@ -186,5 +186,10 @@ microservice {
       host = localhost
       port = 8300
     }
+
+    third-party-orchestrator {
+      host = localhost
+      port = 15501
+    }
   }
 }
