API-8112 - Moving delete app to tpo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,6 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ConfigurationModule"
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.SchedulerModule"
 play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.config.ClockModule"
-play.modules.enabled += "uk.gov.hmrc.apiplatformjobs.connectors.ThirdPartyApplicationConnectorModule"
 
 # Session Timeout
 # ~~~~
@@ -104,12 +103,14 @@ UnusedApplications {
   SANDBOX {
     deleteUnusedApplicationsAfter = 365d
     sendNotificationsInAdvance = [30d, 7d, 1d]
+    authorisationKey = ""
     environmentName = "Sandbox"
   }
 
   PRODUCTION {
     deleteUnusedApplicationsAfter = 730d
     sendNotificationsInAdvance = [30d, 7d, 1d]
+    authorisationKey = ""
     environmentName = "Production"
   }
 }
