API-8112 - Improve config by removing defaults-in-code

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,20 @@ UpdateUnusedApplicationRecordsJob {
   }
 }
 
+deleteUnverifiedDevelopersJob {
+  enabled = false
+  initialDelay = 1m
+  interval = 1h
+  limit = 10
+}
+
+deleteUnregisteredDevelopersJob {
+  enabled = false
+  initialDelay = 2m
+  interval = 1h
+  limit = 10
+}
+
 SendUnusedApplicationNotificationsJob {
   SANDBOX {
     startTime = "00:50" # Time is in UTC
