API-8522 - Making unregistered emails a configurable value

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -141,6 +141,7 @@ deleteUnregisteredDevelopersJob {
   initialDelay = 2m
   interval = 1h
   limit = 10
+  excludedEmails = []
 }
 
 SendUnusedApplicationNotificationsJob {
